# sol-vanity

./: Cargo.toml  Dockerfile  fly.toml
kernels/: vanity.cu
src/: main.rs
