[package]
name = "vanity"
version = "0.4.0"
edition = "2021"
authors = [
    "Cavey Cool <caveycool@gmail.com>",
    "Magnetar Fields <0xMAGNETAR@proton.me>",
]
license = "MIT OR Apache-2.0"
description = "A *bLaZinGlY fAsT* tool for grinding vanity addresses on Solana"

[features]
gpu = ["cc"]
default = []

[profile.release]
lto = "fat"
codegen-units = 1


[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"
bs58 = "0.4"
num_cpus = "1.13"
rand_core = "0.6"
solana-sdk = "1.16"

[build-dependencies]
cc = { version = "1.0.98", optional = true }
