[package]
name = "vanity"
version = "0.4.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"
bs58 = "0.4"
num_cpus = "1.13"
solana-sdk = "1.16"
log = "0.4"
env_logger = "0.10"
